# Colabio-web3-app

./: Cargo.toml  README.md  next.config.mjs  package.json  pnpm-lock.yaml
app/: globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
app/api/auth/wallet/: route.ts
app/api/health/: route.ts
app/api/milestones/[id]/validate/: route.ts
app/api/projects/: route.ts
app/api/projects/[id]/: route.ts
app/api/projects/[id]/contribute/: route.ts
app/api/projects/[id]/vote/: route.ts
app/api/users/[id]/contributions/: route.ts
app/create/: page.tsx
app/discover/: page.tsx
app/fallback/: page.tsx
app/profile/: page.tsx
app/projects/[id]/: page.tsx
app/validate/: page.tsx
components/: community-validation.tsx  contribution-modal.tsx  error-boundary.tsx  label.tsx  loading-states.tsx  logo.tsx  main-nav.tsx  project-creation.tsx  project-detail.tsx  project-discovery.tsx  user-dashboard.tsx  wallet-multi-button.tsx
components/ui/: button.tsx
hooks/: use-supabase.ts
js/: colabio-client.ts  test-colabio.ts
lib/: solana-providers.tsx  supabase.ts
lib/services/: project-service.ts  user-service.ts  validation-service.ts
src/: lib.rs
types/: supabase.ts
